--- a/src/App.css
+++ b/src/App.css
@@ -42,14 +42,15 @@ h1 {
   flex-direction: column;
   align-items: center;
   gap: 15px;
-  margin-top: 20px;
+  margin-top: 60px;
 }
 
 .itinerary-card {
   background-color: white;
-  padding: 15px;
   border-radius: 8px;
-  width: 80%;
+  border-color: hotpink;
+  border-style: solid;
+  width: 30%;
   max-width: 600px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
@@ -129,7 +130,8 @@ button:hover {
 
 .share-section {
   margin-top: 40px;
-  text-align: center;
+  margin-right: 30px;
+  text-align: right;
 }
 
 .share-link-container {
