--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,7 @@ h1 {
 .itinerary-card {
   background-color: white;
   border-radius: 8px;
-  border-color: hotpink;
+  border-color: lightgray;
   border-style: solid;
   width: 30%;
   max-width: 600px;
